<resources>
    <string name="app_name">Calculator</string>
    <string name="koma">,</string>
    <string name="kurung_buka">(</string>
    <string name="kurung_tutup">)</string>
    <string name="pertambahan">+</string>
    <string name="satu">1</string>
    <string name="dua">2</string>
    <string name="tiga">3</string>
    <string name="pengurangan">-</string>
    <string name="empat">4</string>
    <string name="lima">5</string>
    <string name="enam">6</string>
    <string name="perkalian">*</string>
    <string name="tujuh">7</string>
    <string name="delapan">8</string>
    <string name="sembilan">9</string>
    <string name="pembagian">/</string>
    <string name="clear">C</string>
    <string name="delete">DEL</string>
    <string name="nol">0</string>
    <string name="sama_dengan">=</string>
</resources>